[package]
name = "roullete"
version = "0.1.0"
description = "Created with Anchor"
resolver = "2"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "roullete"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
solana-program = "1.18.9"
arrayref = "0.3.7"