[package]
name = "roullete"
version = "0.1.0"
description = "Created with Anchor"
resolver = "2"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "roullete"

[features]
no-entrypoint = []
idl-build = ["anchor-lang/idl-build"]
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
arrayref = "0.3.9"
solana-program = "1.18.8"
